# agentbridge-framework

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run_wizard.sh  start_agentbridge.sh  wizard.py
src/agentbridge/: start.py
src/agentbridge/agents/: README.md  pyproject.toml
src/agentbridge/agents/supervisors/: README.md
src/agentbridge/agents/supervisors/delegator/: README.md  agent.py  pyproject.toml  remote_agent_connection.py
src/agentbridge/agents/supervisors/orchestrator/: README.md  agent_builder.py  main.py  pyproject.toml  runners.py  server.py  settings.py  tools.py
src/agentbridge/agents/workers/: HOW_TO_ADD_WORKER.md  README.md
src/agentbridge/agents/workers/debugger/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/describer/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/prechecker/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/spawner/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/spawner_AGV/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/tester/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/translator_MSF/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/translator_SDF/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/agents/workers/translator_URDF/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
src/agentbridge/app/: README.md  main.py  pyproject.toml  saved_agents.json
src/agentbridge/app/components/: agent_messages.py  api_key_dialog.py  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  event_viewer.py  form_render.py  header.py  page_scaffold.py  poller.py  side_nav.py  task_card.py  tools_list.py
src/agentbridge/app/pages/: agent_list.py  conversation.py  conversations_list.py  event_list.py  home.py  messages.py  settings.py  task_list.py  tools.py
src/agentbridge/app/service/: types.py
src/agentbridge/app/service/client/: client.py
src/agentbridge/app/service/server/: adk_host_manager.py  application_manager.py  in_memory_manager.py  server.py
src/agentbridge/app/state/: agent_state.py  host_agent_service.py  state.py  tools_state.py
src/agentbridge/app/static/: custom.css
src/agentbridge/app/styles/: styles.py
src/agentbridge/app/tests/: test_adk_host_manager.py
src/agentbridge/app/utils/: agent_card.py
src/agentbridge/tasks/: README.md  dashboard.py  llm_eval.py  watch_tasks.py
src/agentbridge/tools/: HOW_TO_ADD_TOOL.md  README.md  mcp_server.py
src/agentbridge/tools/utils/: agent_tools.py  machine_feedback.py  spawner_scripts.py  unit_tests_MJCF.py  unit_tests_SDF.py  unit_tests_URDF.py
