[project]
name = "a2a-samples"
version = "0.1.0"
description = "Worker agents participating in AgentBridge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk==0.2.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "langchain-groq>=0.3.6",
    "langchain_openai",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "ratelimit>=2.2.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "supervisors"]

[tool.uv.workspace]
members = [
    "workers/describer",
    "workers/translator_SDF",
    "workers/translator_URDF",
    "workers/translator_MSF",
    "workers/tester",
    "workers/debugger",
    "workers/spawner",
    "workers/spawner_AGV",
    "workers/prechecker",
    "supervisors/delegator",
    "supervisors/orchestrator",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "ruff>=0.11.2"]
